commit after slider-images-index

--- a/contato.html
+++ b/contato.html
@@ -148,7 +148,7 @@
                     <div class="form-infos">
                         <h4 id="h4-form">Possuímos uma equipe pronta para te atender da melhor maneira possível!</h4>
                         <br>
-                        <h4>Mande uma mensagem mensagem no nosso <span>WhatsApp</span> ou entre em contato através do
+                        <h4>Mande uma mensagem no nosso <span>WhatsApp</span> ou entre em contato através do
                             formulário</h4>
                         <div class="container">
                             <div class="button-wpp">
