--- a/seniorliving.html
+++ b/seniorliving.html
@@ -18,7 +18,7 @@
         rel="stylesheet">
     <!----Jquery-->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="js/lightslider.js"></script>
+    <script type="text/javascript" src="./js/lightslider.js"></script>
 </head>
     <body>
 
@@ -250,8 +250,8 @@
                 </a>
             </div>
         </footer>
-        <script src="js/script.js" type="text/javascript"></script> 
-        <script src="js/buttonMobile.js" type="text/javascript"></script>
-        <script src="js/formValidation.js" type="text/javascript"></script> 
+        <script src="./js/script.js" type="text/javascript"></script> 
+        <script src="./js/buttonMobile.js" type="text/javascript"></script>
+        <script src="./js/formValidation.js" type="text/javascript"></script> 
     </body>
 </html>
