--- a/contato.html
+++ b/contato.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Seecon Engenharia - Contato</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="shortcut icon" href="images/flaticon.png">
-    <link rel="stylesheet" href="./styles/pages/contato.css">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./styles/components/header.css">
+    <link rel="stylesheet" href="./styles/pages/contato.css">
     <link rel="stylesheet" href="./styles/components/footer.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
