--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Seecon Engenharia</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="shortcut icon" href="./images/flaticon.png">
-    <link rel="stylesheet" href="./styles/pages/index.css">
-    <link rel="stylesheet" href="./styles/components/header.css">
-    <link rel="stylesheet" href="./styles/components/footer.css">
     <link rel="stylesheet" href="./styles/main.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./styles/components/header.css">
+    <link rel="stylesheet" href="./styles/pages/index.css">
+    <link rel="stylesheet" href="./styles/components/footer.css">
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <script src="./js/imageController.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -62,7 +61,6 @@
 
     <!----hero-->
     <section>
-        <title>Seecon Engenharia</title>
         <div class='img-fluid' id="hero">
             <div class="infos-hero col-sm-7 col-12">
                 <div class="texts-hero">
@@ -80,7 +78,6 @@
     <!----main-->
     <main>
         <section class="main-home">
-
             <div id="slider">
                 <img class="selected" src="./images/img-exp.jpg" alt="engenheira seecon">
                 <img src="./images/img-exp2.jpg" alt="seecon2">
@@ -88,7 +85,7 @@
             </div>
 
             <div class="main-list">
-                <h2>Expertise em Engenharia</h2>
+                <h1>Expertise em Engenharia</h1>
                 <ul>
                     <li>Recuperação e Reforço Estrutural;</li>
                     <li>Autovistoria e Inspeções Condominial;</li>
@@ -150,7 +147,9 @@
             </a>
         </div>
     </footer>
+
+    <script src="./js/imageController.js" type="text/javascript"></script>
+    <script src="js/buttonMobile.js" type="text/javascript"></script>
 </body>
-<script src="js/buttonMobile.js" type="text/javascript"></script>
 
 </html>
