--- a/diagnostica.html
+++ b/diagnostica.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Seecon Engenharia - Engenharia Diagnóstica</title>
+    <link rel="shortcut icon" href="./images/flaticon.png">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/components/header.css">
+    <link rel="stylesheet" href="./styles/pages/diagnostica.css">
+    <link rel="stylesheet" href="./styles/components/footer.css">
+    <link rel="stylesheet" type="text/css" href="./styles/lightslider.css"/>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="shortcut icon" href="./images/flaticon.png">
-    <link rel="stylesheet" href="./styles/pages/diagnostica.css">
-    <link rel="stylesheet" href="./styles/components/header.css">
-    <link rel="stylesheet" href="./styles/components/footer.css">
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" type="text/css" href="./styles/lightslider.css"/>
+     
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
-     <!----Jquery-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800&display=swap">
+    <!----Jquery-->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/lightslider.js"></script>
+  
 </head>
 <body>
       <!----header-->
@@ -605,6 +605,7 @@
             </a>
         </div>
     </footer>
+    <script type="text/javascript" src="./js/lightslider.js"></script>
     <script src="./js/script.js" type="text/javascript"></script>
     <script src="./js/buttonMobile.js" type="text/javascript"></script>  
     <script src="./js/formValidation.js" type="text/javascript"></script> 
