--- a/estrutural.html
+++ b/estrutural.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Seecon Engenharia - Engenharia Estrutural</title>
-
     <link rel="shortcut icon" href="./images/flaticon.png">
-    <link rel="stylesheet" href="./styles/pages/estrutural.css">
-    <link rel="stylesheet" href="./styles/components/header.css">
-    <link rel="stylesheet" href="./styles/components/footer.css">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/components/header.css">
+    <link rel="stylesheet" href="./styles/pages/estrutural.css">
+    <link rel="stylesheet" href="./styles/components/footer.css">
     <link rel="stylesheet" type="text/css" href="./styles/lightslider.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,7 +18,6 @@
         rel="stylesheet">
     <!----Jquery-->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/lightslider.js"></script>
 </head>
 
 <body>
@@ -387,6 +385,7 @@
             </a>
         </div>
     </footer>
+    <script type="text/javascript" src="./js/lightslider.js"></script>
     <script src="./js/script.js" type="text/javascript"></script>
     <script src="./js/buttonMobile.js" type="text/javascript"></script>
 </body>
