--- a/seniorliving.html
+++ b/seniorliving.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Seecon Engenharia - Living Sênior</title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="shortcut icon" href="./images/flaticon.png">
-    <link rel="stylesheet" href="./styles/pages/livingsenior.css">
-    <link rel="stylesheet" href="./styles/components/header.css">
-    <link rel="stylesheet" href="./styles/components/footer.css">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./styles/components/header.css">
+    <link rel="stylesheet" href="./styles/pages/livingsenior.css">
+    <link rel="stylesheet" href="./styles/components/footer.css">
     <link rel="stylesheet" type="text/css" href="./styles/lightslider.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <!----Jquery-->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/lightslider.js"></script>
 </head>
     <body>
 
@@ -68,12 +66,11 @@
         
         <main>
             <section>
-                <title id="h1-senior">Sênior Living</title>
                 <div class="bg-main">
                     <div class=" col-6"></div>
                     <div class=" col-6 bg-content">
                         <img id="senior-logo" src="./images/senior-logo.png" alt="logo senior living">
-                        <h6>Senior Living é um mix entre o mercado imobiliário, de hospitalidade e o de cuidados. É a habitação para pessoas na melhor idade que trás um novo conceito em conforto.<br>
+                        <h6>Sênior Living é um mix entre o mercado imobiliário, de hospitalidade e o de cuidados. É a habitação para pessoas na melhor idade que trás um novo conceito em conforto.<br>
                             <br>Tudo isso, em local especializado que atenda suas necessidades ao mesmo tempo que alia serviços e experiência.</h6>
                         <div class="button-wpp">
                             <a href="https://api.whatsapp.com/send?phone=+55799172-1777" target="_blank"> 
@@ -250,6 +247,7 @@
                 </a>
             </div>
         </footer>
+        <script type="text/javascript" src="./js/lightslider.js"></script>
         <script src="./js/script.js" type="text/javascript"></script> 
         <script src="./js/buttonMobile.js" type="text/javascript"></script>
         <script src="./js/formValidation.js" type="text/javascript"></script> 
